bugfix(_positioning): change values for z-index

--- a/src/assets/scss/theme/_positioning.scss
+++ b/src/assets/scss/theme/_positioning.scss
@@ -1,6 +1,6 @@
 $zindex: (
-  actions-icons: 3,
-  affrondance-velo: 2,
+  actions-icons: 2,
+  affrondance-velo: 1,
   header: 3,
   modal: 5
 );
